<resources>
    <string name="app_name">Eczane</string>
    <string name="search_hint">Search a pharmacy</string>
    <string name="or">or</string>
    <string name="find_nearest_phar">find the nearest pharmacy</string>
    <string name="search">search</string>
    <string name="get_navigation">Get directions</string>
    <string name="address">Address</string>
    <string name="placeholder_text" translatable="false">Example</string>
    <string name="placeholder_phone" translatable="false">+90 999 888 77 66</string>
    <string name="sentry_image_dec">Sentry</string>
    <string name="call">Call</string>
    <string name="phone_number">phone</string>
    <string name="only_sentry">Only Sentry</string>
    <string name="last_searches">Last Searches</string>
    <string name="add_fav">Add Favorites</string>
    <string name="remove_fav">Remove Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No Favorites</string>


</resources>
